--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -3323,8 +3323,8 @@
  RUS.Neutral_Libertarian_icon: "£RUS_neutral_libertarian"
  RUS.neutral_Social: "£RUS_neutral_socialism Artpodgotovka"
  RUS.neutral_Social_icon: "£RUS_neutral_socialism"
- SOV.Neutral_Autocracy: "£RUS_neutral_autocracy Russian Insurgent Army"
- SOV.Neutral_Autocracy_icon: "£RUS_neutral_autocracy"
+ RUS.Neutral_Autocracy: "£RUS_neutral_autocracy Russian Insurgent Army"
+ RUS.Neutral_Autocracy_icon: "£RUS_neutral_autocracy"
  #Nationalist
  RUS.Nat_Fascism: "£RUS_nationalist_fascism Assotsiatsiya Narodnogo Soprotivleniya"
  RUS.Nat_Fascism_icon: "£RUS_nationalist_fascism"
