--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -3231,7 +3231,7 @@
  ESB.socialism_icon: "£FAR_western_socialism"
  #Emerging
  ESB.Communist-State: "£FAR_communiststate Kommunisticheskaya Partiya Sibiri"
- ESB.Communist-State_icon: "£FAR_communiststate"
+ ESB.Communist-State_icon: "£FAR_communist-state"
  ESB.anarchist_communism: "£FAR_anarchist_communism Sotsialisticheskaya Al'ternativa"
  ESB.anarchist_communism_icon: "£FAR_anarchist_communism"
  #Non-Aligned
