--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -3230,7 +3230,7 @@
  ESB.socialism: "£FAR_western_socialism Narodno-Democraticheskiy Soyuz"
  ESB.socialism_icon: "£FAR_western_socialism"
  #Emerging
- ESB.Communist-State: "£FAR_communiststate Kommunisticheskaya Partiya Sibiri"
+ ESB.Communist-State: "£FAR_communist-state Kommunisticheskaya Partiya Sibiri"
  ESB.Communist-State_icon: "£FAR_communist-state"
  ESB.anarchist_communism: "£FAR_anarchist_communism Sotsialisticheskaya Al'ternativa"
  ESB.anarchist_communism_icon: "£FAR_anarchist_communism"
