setting up main decision chains for the start of the content

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8451,6 +8451,14 @@
  USoE.Western_Autocracy_icon: "£EU_parliament_PG_Western_Autocracy"
  USoE.Western_Autocracy_desc: "(Western Autocracy) - Alliance of Pro-Western Autocracy (APWA)\nThe Alliance of Pro-Western Autocrats is a relatively new party on the grand scale of the European Parliament. It maintains a foreign policy of being Western-aligned with autocratic characteristics."
 
+ USoE.Western_Autocracy_Mil: "£EU_parliament_PG_Western_Autocracy (JCoS) - Joint Chiefs of Staff"
+ USoE.Western_Autocracy_Mil_icon: "£EU_parliament_PG_Western_Autocracy"
+ USoE.Western_Autocracy_Mil_desc: "(Military Government) - Joint Chiefs of Staff (JCoS)\n\nThe Joint Chiefs of Staff (JCoS) is the political branch of the USoE Military. This union of military officers has seized power to stabilize a failing government, and provide safety and security to all those who live in the United States of Europe"
+
+ USoE.Western_Autocracy_Pdx: "£EU_parliament_PG_Western_Autocracy (PDX) - Paradox Interactive"
+ USoE.Western_Autocracy_Pdx_icon: "£EU_parliament_PG_Western_Autocracy"
+ USoE.Western_Autocracy_Pdx_desc: "(Gaming Megacorporation) - Paradox Interactive (PDX)\n\nParadox Interactive (PDX) is a gaming company who, in a brilliant scheme of political cunning, economic development, and sheer guts, has managed to obtain a majority of the vote in the USoE government. Now setting the rules for themselves, who knows what they can accomplish?"
+
  USoE.conservatism: "£EU_parliament_PG_conservatism (EPP-ED) - European People's Party and European Democrats"
  USoE.conservatism_icon: "£EU_parliament_PG_conservatism"
  USoE.conservatism_desc: "(Conseravtism) - European People's Party and European Democrats (EPP-ED)\n\nThe European People's Party and European Democrats (EPP-ED) was born from the merge of the European People's Party, composed primarily by Christian Democrats, and the European Democrat Union, composed of conservatives with a more eurosceptic approach. It's political agenda is focused on respect for traditions and guaranteeing individual social and economical freedoms, and values to pursue with the help of individual responsibility without disregarding the environment and with an eye to the public budget. "
