--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -47,6 +47,27 @@
  UOE_TRANSITIONAL_COUNCIL: "USoE Transitional Government"
  UOE_TRANSITIONAL_COUNCIL_DESC: "A transitional government, created upon the creation of the United States of Europe. This caretaker government exists only to help the people establish their new nation, and will be replaced as soon as the new government is fully established."
 
+ ### Variables / Flags ###
+ new_government_established: "Government has been established."
+ recovered_economy_tt: "The Economy has been stabilized"
+ no_culture_war_tt: "The Culture War is over"
+ military_cooperation_tt: "Military Revolt is less than §Y40%§!"
+ government_popularity_tt: "Government Popularity is greater than §Y40%§!"
+ military_revolting_tt: "Military Revolt is at least §Y100%§!"
+ military_not_revolting_tt: "Military Revolt is less than §Y100%§!"
+
+ ### Decisions / Cateogries ###
+ UOE_forming_a_government_category: "Forming a New Government"
+ UOE_forming_a_government_category_desc: "Our people have decided, and now that we have merged, we must establish a real government to rule. This will take some time, but we must first establish ourselves culturally, economically, and politically, in order to ensure the safety and stability of our people. We must not take to long, however, or push the people too far, lest there be unforseen consequences....\n\n§RFailing the Form a Government mission will result in the military seizing power over the USoE.\n\nAdditionally, pushing the people or military too far will also result in a military coup of the USoE§!\n\n§YMilitary Revolt:§! §R[?military_revolt|%]§!\n\nMilitary Revolt is the percentage of likelihood that the military is going to seize power from the transitional government, and establish a military government for the people. At 70% or greater, events will start to occur, and at 100%, the coup attempt will occur.\n\nStability, Government Popularity, Protest Strength, Protest Radicalization, and Economic Status will all affect how the military revolt value changes.\n\n§RIF STABILITY REACHES 0, THE MILITARY WILL SEIZE POWER IN AN EMERGENCY MEASURE§!"
+ UOE_economic_instability_category: "Economic Instability"
+ UOE_economic_instability_category_desc: "Our nation is in a time of economic crisis. Demands for everything have skyrocketed, and with the merger of all our economies into one unified one, buisnesses are in turmoil, and low productivity regions are suffering the worst of the effects. We must work quickly to close the gap between our high and low productivity regions, or else those who got the worst of the deal may choose to leave."
+ form_a_government: "Form a Government"
+ form_a_government_desc: "Form a new government for the United States of Europe"
+ military_coup_start: "Military Coup"
+ military_coup_start_desc: "If the military is not kept happy, there may be a coup..."
+ countdown_to_revolution: "The Coup Countdown"
+ countdown_to_revolution_desc: "We have a limited time to correct our issues, or else the military will seize power..."
+
  ### Focuses ###
  UOE_Constitute_the_United_States_of_Europe: "Constitute the United States of Europe"
  UOE_Constitute_the_United_States_of_Europe_desc: "The people, and parliament, have spoken. In a great, historical moment, the nations of the European Union are no longer just a union, but one nation, and one family. A great task lies before us, greater than anything our fathers faced, but together, we march towards our bold new future."
