more usoe setup

--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -74,6 +74,14 @@
  UOE_Begin_Total_Unification: "Begin Total Unification"
  UOE_Begin_Total_Unification_desc: "The beginning steps require us to integrate all parts of our society, and quickly. Failure to do so could spell disaster for the United States of Europe, and could bring this all crashing down around us. Economic, Social, Military, and Political issues must be resolved quickly.\n\n§RStarts the decision and event chains that can lead to the collapse of the USoE if improperly managed!§!"
 
+ ### Events ###
+ UOEEvent.1.t: "The Military Coup"
+ UOEEvent.1.d: "The Joint Chiefs of Staff storm into the parliament, with a company of soldiers behind them. The leader speaks loudly, his voice echoing in the room: 'Too long have you been left in power, taking advantage while the people suffer. It ends today! We will have a government, for the people!'"
+ UOEEvent.1.a: "We must relinquish power"
+ UOEEvent.1.a_desc: "We will transfer power to the Joint Chiefs of Staff without a fight."
+ UOEEvent.1.b: "It's treason, then!"
+ UOEEvent.1.b_desc: "Traitors can never be trusted or reasoned with. Our military will save us!\n\n§RThis path will start a civil war!§!"
+
  ### 5% ###
  tooltip_USoE_Western_Autocracy_rise_5: "§Y[THIS.Western_Autocracy_L]§! gain §G5%§! support."
  tooltip_USoE_conservatism_rise_5: "§Y[THIS.conservatism_L]§! gain §G5%§! support."
