--- a/localisation/english/MD_middle_east_content_l_english.yml
+++ b/localisation/english/MD_middle_east_content_l_english.yml
@@ -117,7 +117,7 @@
  GCC_discourage_female_representation: "§YDiscourage§! Female Representation in Government"
  GCC_discourage_female_representation_desc: "The presence of women in political positions is an embarrassment for our society. We should work against this nefarious trend."
  GCC_expand_female_employment: "§YExpand§! Female Employment Options"
- GCC_expand_female_employment_desc: "Businesses overwhelmingly employing men rather than women is a hinderance to our society. We should not cripple our economy's capabilities in order to keep to old-fashioned traditions."
+ GCC_expand_female_employment_desc: "Businesses overwhelmingly employing men rather than women is a hindrance to our society. We should not cripple our economy's capabilities in order to keep to old-fashioned traditions."
  GCC_limit_female_employment: "§YLimit§! Female Employment Options"
  GCC_limit_female_employment_desc: "The employment of women in business goes against our Islamic values and traditions. We should remind women of their rightful position in society."
  GCC_legalize_alcohol_in_hotels_and_clubs: "§YLegalize§! Alcohol in Hotels and Clubs"
@@ -1106,7 +1106,7 @@
  SAU_GCC_CRISIS.26.c: "Interesting."
 
  SAU_GCC_CRISIS.27.t: "The [UAE.GetAdjective] Blockade"
- SAU_GCC_CRISIS.27.d: "Since he took power, [UAE.GetLeader] has taken [UAE.GetNameDef] down a path that has seen [UAE.GetNameDef] openly contradict our foreign policy, blatantly pursuing close ties with Iran. The time has come to bring an end to [SAU.GetNameDef]'s misbehavior."
+ SAU_GCC_CRISIS.27.d: "Since he took power, [UAE.GetLeader] has taken [UAE.GetNameDef] down a path that has seen [UAE.GetNameDef] openly contradict our foreign policy, blatantly pursuing close ties with Iran. The time has come to bring an end to [UAE.GetNameDef]'s misbehavior."
  SAU_GCC_CRISIS.27.a: "They will submit or suffer."
  SAU_GCC_CRISIS.27.b: "On second thoughts, we should not risk it."
 
