--- a/localisation/english/MD_ideas_l_english.yml
+++ b/localisation/english/MD_ideas_l_english.yml
@@ -321,9 +321,9 @@
  CHI_Peacekeepers: "Peacekeeping Missions"
  CHI_Peacekeepers_desc: "Our personnel have been deployed overseas to assist in UN peacekeeping missions on the African continent, giving our troops much needed experience and increasing our credibility as a dependable member of the international community."
  SCO_development_assistance: "SCO Development Assistance"
- SCO_development_assistance_desc: "We have been granted much needed development assistance under the auspices of the Shanghai Cooperation Organization."
+ SCO_development_assistance_desc: "We have been granted much-needed development assistance under the auspices of the Shanghai Cooperation Organization."
  SCO_development_assistance_2: "[CHI.GetAdjective] Development Assistance"
- SCO_development_assistance_2_desc: "We have been granted much needed development assistance by China under the auspices of the Shanghai Cooperation Organization."
+ SCO_development_assistance_2_desc: "We have been granted much-needed development assistance by China under the auspices of the Shanghai Cooperation Organization."
  SCO_joint_drill: "SCO Joint Exercises"
  CHI_Invigorate_Country_Through_STE1: "Invigorate Country Through STE"
  CHI_promoting_innovation: "Promoting Innovation"
@@ -332,7 +332,7 @@
  CHI_improving_rd_desc: ""
  CHI_dominant_tech_industry: "Chinese Tech Dominance"
  CHI_dominant_tech_industry_desc: "Science and technology are primary productive forces."
- CHI_idea_high_speed_railway_modifier: "Chinese High Speed Railway"
+ CHI_idea_high_speed_railway_modifier: "Chinese High-Speed Railway"
  CHI_idea_high_speed_railway_modifier_desc: "The High-speed Railway of the People's Republic of China is currently the largest high-speed railway network in the world."
  CHI_electric_car_project_idea: "Chinese Electric Car Project"
  CHI_electric_car_project_idea_desc: "China's electric car project will be a leap forward in vehicle industrial."
@@ -372,11 +372,11 @@
 
  #International Recognition
  Non_State_Actor: "Non-State Actor"
- Non_State_Actor_desc: "Many international actors, from rebel groups to NGOs, possess international significance but are severly disadvantaged in a number of different ways by virtue of not being recognized states. Some of these non-state actors aspire to take control of an existing state by overthrowing an unjust government or to fashion a new one and redraw international borders. Others have no ambition for statehood, but instead use blunt force to accumulate power and wealth in local environments where the authority of the central government is absent."
+ Non_State_Actor_desc: "Many international actors, from rebel groups to NGOs, possess international significance but are severely disadvantaged in a number of different ways by virtue of not being recognized states. Some of these non-state actors aspire to take control of an existing state by overthrowing an unjust government or fashioning a new one and redrawing international borders. Others have no ambition for statehood, but instead, use blunt force to accumulate power and wealth in local environments where the authority of the central government is absent."
  Lacks_International_Recognition: "Aspiring State"
- Lacks_International_Recognition_desc: "Some states possess everything you would normally associate with a state. A bureaucracy, a military, a national flag and so on. However, their statehood will never be complete without the added benefits conferred by the stamp of legitimacy of international recognition. These states may seek to acquire this recognition by campaigning for their cause overseas, with the eventual aim of winning the support of a critical mass of states in order to become full members of the international community."
+ Lacks_International_Recognition_desc: "Some states possess everything you would normally associate with a state. A bureaucracy, a military, a national flag and so on. However, their statehood will never be complete without the added benefits conferred by the stamp of legitimacy of international recognition. These states may seek to acquire this recognition by campaigning for their cause overseas, with the eventual aim of winning the support of a critical mass of states to become full members of the international community."
  rival_government: "Rival Government"
- rival_government_desc: "Civil wars over control of the entire nation tend to produce two or more governments that claim to be the legitimate representatives of their people. This government is one that makes such a claim, but is disadvantaged by the fact that its status as legitimate representative is only recognized by a few other states, if any. It therefore does not represent its nation at international forums like the United Nations."
+ rival_government_desc: "Civil wars over control of the entire nation tend to produce two or more governments that claim to be the legitimate representatives of their people. This government is one that makes such a claim but is disadvantaged by the fact that its status as a legitimate representative is only recognized by a few other states, if any. It therefore does not represent its nation at international forums like the United Nations."
 
  #Macau
 
@@ -385,14 +385,18 @@
  City_Of_Casino: "City Of Casinos"
  City_Of_Casino_desc: "The City of Casinos, or Macau, is a colloquial name for the city of Macau which houses some of the highest density of casinos in Asia. It is lovingly called the Las Vegas of Asia or \"Chinese Vegas\" from this phenomenon. The revenue the casinos bring in for the city remains unparalleled and makes it an excellent revenue stream for the city keeping the gambling industry out of the hands of the government."
 
+ # Monaco
+ MNC_city_of_casino: "The Casino City for the Rich"
+ MNC_city_of_casino_desc: "Monaco is lovingly known in Europe as the \"Casino City\" due to the numerous casinos. In particular, the casinos in Monaco cater to the rich in tandem with the city being a playground for billionaires and the rich."
+
  #Myanmar/Burma
 
  ASEAN_Member: "ASEAN Member"
- ASEAN_Member_desc: "ASEAN is a primarily economic intergovernmental organisation based in Jakarta that was originally established in 1967. It has since expanded to include those countries that were originally excluded in the tense environment of the Cold War, and has sought to counter the growing influence of China as well as maintain independence from the West. It is committed to the principles of multilateralism, international law, peaceful dispute settlement, non-interference and self-determination."
+ ASEAN_Member_desc: "ASEAN is a primarily economic intergovernmental organization based in Jakarta that was originally established in 1967. It has since expanded to include those countries that were originally excluded in the tense environment of the Cold War and have sought to counter the growing influence of China as well as maintain independence from the West. It is committed to the principles of multilateralism, international law, peaceful dispute settlement, non-interference and self-determination."
  socialist_vietnam: "Socialist Republic of Vietnam"
  socialist_vietnam_desc: "The Socialist Republic of Vietnam implements one-party dictatorship and adheres to the leadership of the Communist Party of Vietnam."
  lao_vietnan_treaty: "Lao-Vietnamese Treaty of Friendship and Cooperation"
- lao_vietnan_treaty_desc: "The treaty signed by the Communist Party of Laos and the Communist Party of Vietnam in Vientiane on July 18, 1977 was an important layout for Vietnam to conceive the establishment of the "Indochina Federation" at that time."
+ lao_vietnan_treaty_desc: "The treaty signed by the Communist Party of Laos and the Communist Party of Vietnam in Vientiane on July 18, 1977, was an important layout for Vietnam to conceive the establishment of the \"Indochina Federation\" at that time."
  VIE_VPA_Business_Ventures: "VPA Business Ventures"
  VIE_VPA_Business_Ventures_desc: "In the 1960s and 1970s, the Vietnamese military had business activities, mainly importing from China and the Soviet Union. After the Battle of Two Mountains in 1990, China and Vietnam completely stopped the border war, so Vietnam cut military spending and minimized expenses. In the 1990s, Vietnam's military expenditure fell sharply, and Vietnam imitated China's military business, allowing the military to engage in business activities and use the money earned to repay debts and improve military equipment and welfare."
  dominance_of_the_cpp: "Dominance of the CPP"
