--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -161,9 +161,6 @@
  EU_voting_mission_focus_EU610_QMV_result_desc: "成员国对白俄罗斯提案进行了投票表决，是时候公布结果了。"
  EU_voting_mission_focus_EU611_QMV_result: "内部扩张的投票结果"
  EU_voting_mission_focus_EU611_QMV_result_desc: "成员国对内部扩张提案进行了投票表决，是时候公布结果了。"
- EUevent.1.t: "欧盟的现状"
- EUevent.1.d: "欧盟的现状已经更新了"
- EUevent.1.a: "好！"
  EUevent.2.t: "欧盟-土耳其协议"
  EUevent.2.d: "§C[EUU.GetFlag]欧洲联盟§!与[TUR.GetNameWithFlag]达成了关于阻止非法移民从土耳其到欧洲的协议。根据欧盟-土耳其协议，所有来自土耳其到希腊岛屿的新非法移民与尝试寻求庇护者和那些申请庇护者都已经被宣布不可受理，并会被送返土耳其。§C[EUU.GetFlag]欧洲联盟§!会支付三十亿欧元以支持土耳其境内的难民设施。"
  EUevent.2.a: "好！"
@@ -177,13 +174,13 @@
  EUevent.4.d: "[FROM.GetNameWithFlag]正在将§C[EUU.GetFlag]欧洲联盟§!的成员国团结在一起，以组成一个名为§C[EUU.GetFlag]欧洲合众国§!的超级欧洲国家。[ROOT.GetNameWithFlag]将放弃它的主权，并加入§C[EUU.GetFlag]欧洲合众国§!。"
  EUevent.4.a: "欢乐颂！"
  EUevent.5.t: "欧洲债务危机"
- EUevent.5.d: "因为全球金融危机，数个欧元区成员 - [GRE.GetNameWithFlag]，[ITA.GetNameWithFlag]，[POR.GetNameWithFlag], [IRE.GetNameWithFlag]，[SPR.GetNameWithFlag]和[CYP.GetNameWithFlag] - 无力偿还或再融资其政府债务或救助负债过重的银行。\n\n 这是对整个欧元区的危机!"
+ EUevent.5.d: "欧盟未能实施欧元区改革。欧盟成员国无力偿还或再融资政府债务，或救助负债累累的银行。成员国现在正忙于尽快推进改革，以确保欧元区的金融和经济可行性。危机已经开始，欧元正濒临崩溃。"
  EUevent.5.a: "欧元危在旦夕!"
  EUevent.6.t: "欧元改革"
- EUevent.6.d: "欧元区的成员国改革了货币联盟，这将可以解决现有问题并避免未来的危机。"
- EUevent.6.a: "好！"
+ EUevent.6.d: "通过实施财政联盟、扩大欧洲中央银行的权力和增加稳定机制等一系列改革，欧元区避免了迫在眉睫的债务危机。欧元区得到了拯救，欧盟现在可以满怀信心地展望未来，因为危机已经避免。"
+ EUevent.6.a: "多元一体"
  EUevent.7.t: "欧元区改革……"
- EUevent.7.d: "欧元岌岌可危！\n\n几个欧元区成员国 - [GRE.GetNameWithFlag]，[POR.GetNameWithFlag]，[IRE.GetNameWithFlag]，[SPR.GetNameWithFlag]和[CYP.GetNameWithFlag] - 无力偿还或为其政府债务再融资，或是为负债过多的银行摆脱困境。我们必须改革货币联盟，否则它可能会崩溃。"
+ EUevent.7.d: "美国的全球金融危机引发了欧洲国家的连锁反应。欧洲议会的许多成员正在寻求解决欧盟一些国家不断增加的债务的方案。全球金融危机后，这些国家既未能支付政府债务，也未能为其政府债务再融资，也未能向破产银行发放紧急资金。所有相关成员国都报告称无力偿还债务，并表示其预算赤字比之前想象的要严重得多。各国的主要共同点是，危机的根源在于通过一系列债务救助将私人债务转为国家债务，以拯救国内陷入困境的机构。欧洲央行和国际货币基金组织已开始与成员国达成协议，发布救助计划和国家救助计划，以防止更严重的危机发生。仍然明确的一件事是，欧盟正处于灾难性危机的边缘，因为我们正处于全球金融危机风暴的中心。我们必须保持强大，欧盟必须改革欧元区，这样我们才能渡过难关，并表明欧盟不会动摇。现在不行，明天不行，永远不行。多元一体。"
  EUevent.7.a: "为了欧元！"
  EUevent.8.t: "三头马车改革完成了！"
  EUevent.8.d: "[ROOT.GetNameWithFlag] 开始了由三头马车－欧盟执委会、欧盟央行和国际货币基金组织所要求的改革.这代表着对 [ROOT.GetNameWithFlag] 国民的紧缩政策!"
@@ -3324,3 +3321,9 @@
  VOJ_Nat_Fascism_loc_key: "[VOJ.Nat_Fascism_L_icon] ([VOJ.GetFlag] [?VOJ.MEP_Nat_Fascism]) "
  VOJ_Nat_Autocracy_loc_key: "[VOJ.Nat_Autocracy_L_icon] ([VOJ.GetFlag] [?VOJ.MEP_Nat_Autocracy]) "
  VOJ_Monarchist_loc_key: "[VOJ.Monarchist_L_icon] ([VOJ.GetFlag] [?VOJ.MEP_Monarchist]) "
+ EUU_migrant_crisis_triggered: "§Y欧洲移民危机§!触发"
+ EUevent.22.t: "欧洲移民危机"
+ EUevent.22.d: "非洲和中东的各种战争、激进圣战主义的兴起等因素导致许多人逃离家园。这些饱受战争蹂躏的国家之间的动乱和不稳定造成了几十年来我们从未见过的流离失所。成千上万的移民开始涌向欧盟寻求庇护和难民身份。欧盟边缘国家已经动员边防警卫和警察来阻止移民潮，但他们希望欧盟采取永久性措施。一些临时解决方案包括与土耳其达成协议以安置部分移民，而其他国家则希望建立一个更常设的机构，如欧洲庇护机构来处理这股浪潮。有一件事是肯定的，那就是必须迅速有效地处理这个问题。"
+ EUevent.22.a: "新的危机开始了。"
+ Migrant_Crisis_Europe: "移民危机"
+ Migrant_Crisis_Europe_desc: "移民危机给欧洲带来了沉重打击，不仅破坏了国家团结，也打击了执政党的声望。叙利亚战争导致成千上万的难民逃往邻国，尽管欧洲已经做好了接收战争受害者的准备，但来自北非和中东各地的新移民和永久移民数量已经让欧洲机构不堪重负，许多人对这些新移民心生怨恨。"
