--- a/localisation/simp_chinese/MD_focus_GENERIC_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GENERIC_l_simp_chinese.yml
@@ -182,7 +182,7 @@
  GENERIC_countermeasures_against_armored_units: "反装甲对策"
  GENERIC_countermeasures_against_armored_units_desc: ""
  GENERIC_energy_sector: "能源领域"
- GENERIC_energy_sector_desc: "为了能够维持一个国家的生存，能源领域必须首先保持最新状态。 我们应该建设一座化石燃料工厂和一些可再生能源基础设施，为整个地区提供负担得起的、可靠的能源。"
+ GENERIC_energy_sector_desc: "一个国家要想维持下去，首先必须让其能源部门保持与时俱进。我们应该建设化石燃料工厂和一些可再生能源基础设施，为整个地区提供负担得起的、可靠的能源。"
  GENERIC_fossil_powerplant: "化石燃料发电厂"
  GENERIC_fossil_powerplant_desc: "我们可以将能源领域的重点放在选择化石燃料作为正确的选择上，牺牲产量和创新来换取廉价且经过充分研究的能源生产方法。"
  GENERIC_improved_energy_cycling: "改进发电厂"
