--- a/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
@@ -1030,7 +1030,7 @@
  ITA_air_defences: "防空"
  ITA_air_defences_desc: "拥有现代化的地对空导弹网络，是防止敌方使用飞机和导弹对我们的领土和部队发动攻击的关键。自冷战结束以来，我们在这一领域的防御能力一直很有限和落后。用更多的现代化地对空导弹加强重要点，将对我们大有裨益。"
  ITA_missile_defences: "导弹防御"
- ITA_missile_defences_desc: "弹道导弹是一种少见的威胁，但是仅仅击中一发，也可能给我们的城市带来灾难。我们需要建立一个新的反弹道导弹网络，确保即使是最坚决的攻击，也无法对我们造成过于沉重的打击。"
+ ITA_missile_defences_desc: "弹道导弹是一种少见的威胁，但即使只有一枚导弹击中目标，也会给我们的城市带来毁灭。我们需要建立一个新的反弹道导弹网络，以确保即使是最坚决的攻击也无法对我们造成如此毁灭性的打击。"
  ITA_naval_bases: "海军基地"
  ITA_naval_bases_desc: "新扩建的意大利海军需要新的基地，可以容纳更多的海军人员和停靠更多的舰船，以保持战备状态。最好我们建造这些基地，这样我们就不会把我们的舰队密集地挤在有限的几个地点，给敌人提供一个完美的机会来打击和消灭它。"
  ITA_coastal_defense: "海防"
@@ -1159,13 +1159,13 @@
  ITA_attack_submarines_desc: "潜艇是目前公海上用途最广泛的单位。他们在执行贸易封锁、战场监视甚至秘密行动等各种任务时可以保持不被发现。在地中海，我们的潜艇可以盯死大型水面舰艇。"
  ITA_attack_submarines_spirit: "国策：攻击潜艇"
  ITA_frontline_corvettes: "前线护卫舰"
- ITA_frontline_corvettes_desc: "虽然护卫舰是我们海军的骨干，但是轻型护卫舰可以让我们填补我们的海军需求的空缺，而且可以分配给战斗密集，但是同样重要的角色，比如贸易保护或巡逻，而不牺牲整体的海军力量。"
+ ITA_frontline_corvettes_desc: "虽然护卫舰构成了我国海军的骨干力量，但轻型护卫舰能够让我们弥补海军需求的空白，并可在不牺牲整体海军实力的情况下，承担战斗密集但同样重要的角色，如贸易保护或巡逻。"
  ITA_frontline_corvettes_spirit: "国策：前线护卫舰"
  ITA_frigate_backbone: "护卫舰船体"
  ITA_frigate_backbone_desc: "护卫舰是当今海上最常见的军舰类型，鉴于我们的区域重点，我们也关注这种类型的船只才有意义。我们可以部署更多的船只，而且成本比同类大型船只舰队要少。"
  ITA_frigate_backbone_spirit: "国策：护卫舰船体"
  ITA_dedicated_AA_destroyers: "专用防空驱逐舰"
- ITA_dedicated_AA_destroyers_desc: "空袭是海军舰艇面临的最危险的威胁之一。我们需要开发系统和训练方案，提高我们的防空能力，甚至可能生产专注于舰队防空的舰艇。驱逐舰是这些平台的最佳选择。"
+ ITA_dedicated_AA_destroyers_desc: "空袭是海军舰艇可能面临的最危险威胁之一。我们需要开发能够增强防空能力的系统和训练方案，甚至可能生产专注于舰队防空的舰艇。驱逐舰是实现这些目标的最佳平台。"
  ITA_dedicated_AA_destroyers_spirit: "国策：专用防空驱逐舰"
  ITA_oceanic_navy: "大洋海军"
  ITA_oceanic_navy_desc: "虽然我们一直是主要的地中海强国，但突破本土海洋的限制使我们能够采取更加自信的全球姿态。这将严重改变我们的学说，但也为我们使用海军力量提供了更多的可能性，并在整体上打造一支更强大的军队，即使它不太专门用于本土防御。"
@@ -2418,7 +2418,7 @@
  ITA_encourage_micro_hydropower_desc: "尽管绝大多数大型水电潜力项目已在上个世纪开发，但小型水电工程仍有很大的开发空间。"
  ITA_encourage_micro_hydropower_TT: "将水力发电量增加§G25%§!"
  ITA_develop_pumped_hydro: "发展抽水蓄能"
- ITA_develop_pumped_hydro_desc: "我们庞大的水力发电基础设施的很大一部分可以通过抽水力发电技术来储存能源。投资它是明智的，特别是如果未来将安装更多的可再生能源。"
+ ITA_develop_pumped_hydro_desc: "我们庞大的水力发电基础设施中很大一部分都可以通过抽水蓄能技术来储存能源。投资抽水蓄能技术将是明智之举，尤其是如果未来安装更多的可再生能源。"
  ITA_develop_pumped_hydro_TT: "将为每GW水力发电储能池添加§G100 GWh§!"
  ITA_subsidize_rooftop_solar: "补贴屋顶太阳能"
  ITA_subsidize_rooftop_solar_desc: "我们的国家受到太阳的祝福，尝试更多地利用它不会有什么坏处。"
