--- a/localisation/simp_chinese/MD_focus_USA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_USA_l_simp_chinese.yml
@@ -637,7 +637,7 @@
  USA_focus_shining_act: "光辉法案"
  USA_focus_shining_act_desc: "光辉法案是一系列采矿改革，旨在扩大国内区域采矿作业，以更好地利用现有矿石进行试验，并使上述作业长期盈利。"
  USA_focus_the_capital_region: "首都地区"
- USA_focus_the_capital_region_desc: "围绕华盛顿特区首都地区的州是一个相当富裕的地区。然而，这并不意味着我们应该取消针对他们的经济投资，国会决定这些投资可能是什么。"
+ USA_focus_the_capital_region_desc: "华盛顿特区周边的州是一个相当富裕的地区。然而，这并不意味着我们不应该将它们排除在经济投资之外，因此，这些投资的具体内容将由国会决定。"
  USA_focus_parkersburg_economic_committee: "帕克斯堡经济委员会"
  USA_focus_parkersburg_economic_committee_desc: "帕克斯堡经济委员会是一个联合的州际商业委员会，负责评估和制定有针对性的经济倒退解决方案，以此作为促进欠发达地区当地经济发展的一种方式。"
  USA_focus_atlantic_act: "大西洋法案"
@@ -767,7 +767,7 @@
  USA_green_trade_deals: "绿色贸易"
  USA_green_trade_deals_desc: "美国是一个富裕的国家，其贸易在国外造成的伤害与在国内造成的伤害一样多。为了找到两者的最佳平衡，需要对我们的贸易和资源开采政策进行彻底审查。尽管有些人最终可能会对我们产生敌意，但我们仍会坚持下去。"
  USA_planting_new_programs: "新种植计划"
- USA_planting_new_programs_desc: "政府有责任保持我们人民投资的持续成功，但我们可以将这种成功出口到其他国家。通过投资于改善世界上关键国家的生活，我们可以期待他们感激我们，并追求类似的事业来改善自己和他人的状况。我们将是点燃这个星球变革之火的火柴。"
+ USA_planting_new_programs_desc: "政府有责任确保人民的投资持续成功，但我们可以将其输出到其他国家。通过研究改善世界关键国家生活的投资，我们可以期望他们心存感激，并进行类似的投资，以改善自己和他人的生活。我们将成为点燃这个星球变革导火索的火柴。"
  USA_foreign_policy_plan_green: "规划绿色外交政策"
  USA_foreign_policy_plan_green_desc: "我们将寻求对那些需要它的国家的进一步投资，这些发展计划符合生态标准，但发展将为这些国家及其人民创造未来。"
  USA_ecocation: "生态区划法案"
@@ -833,15 +833,15 @@
  USA_state_interventionism: "国家干预主义"
  USA_state_interventionism_desc: "企业的贪婪和自私会阻碍真正的发展和进步。考虑到这一点，我们将引入立法，允许联邦政府在必要时对有限和有针对性的领域进行全面干预。我们会遇到一些反对，但没有什么是我们不能克服的。"
  USA_welfare_state: "福利国家"
- USA_welfare_state_desc: "虽然福利计划既不是左派也不是右派的概念，它只是对那些为国家做出贡献的人的关怀。但我们必须说服公众，并在政治上重新夺回一些地盘。我们可以利用这些计划来传递一个信息，并帮助缓和人们对我们的政党，甚至我们的国家的看法。"
+ USA_welfare_state_desc: "虽然福利计划既不是左派概念也不是右派概念，但它只是对那些为国家尽一份力的人的关怀。我们必须说服公众，并在政治上夺回一些优势。我们可以利用这些计划来传递信息，并帮助软化人们对我们党和我们国家的看法。"
  USA_public_ownership: "公有制委员会"
  USA_public_ownership_desc: "公有制委员会将是一个政府委员会，负责管理直接或间接受政府控制的公共实体。这包括国家和联邦层面的实体，每个层面都将有自己的分委员会，以便保持流畅的关注和同一伞下的协调。"
  USA_defunding_militarism: "撤资军国主义"
  USA_defunding_militarism_desc: "我们国家过去的高度军事化已经逐渐软化，人们终于意识到我们不再处于冷战时期。我们将直接动用美国陆军工程兵部队参与和平时期的开发，并通过激励民用经济而非军事经济来打击这一问题的核心。"
  USA_planned_economy: "经济规划"
- USA_planned_economy_desc: "我们将开始有限的政府计划，以促进经济增长，支持公共部门。我们可以关注人民的需求，反过来，公共部门可以处理国家的过剩。虽然这不是一个万无一失的计划，但它毕竟是朝着正确的方向迈出的一步。"
+ USA_planned_economy_desc: "我们将开始实施有限的政府经济增长计划，以支持公共部门。我们可以专注于人民的需求，反过来，公共部门可以处理国家的过度支出。虽然这不是一个万无一失的计划，但它是朝着正确方向迈出的一步。"
  USA_society_of_classes: "阶级社会"
- USA_society_of_classes_desc: "我们是一个阶级社会，我们是由出生决定的。我们必须传播我们的信息，寻求改善人民，改善国家，改善我们整个社会的方式。我们必须关注那些试图破坏小人物的人，我们必须让每个人都有更平等的机会。我们的意志是坚强的，我们也必须让我们的人民变得坚强。"
+ USA_society_of_classes_desc: "我们是一个阶级社会，我们是由出生决定的。我们必须传播我们的信息，寻求改善人民、改善国家和改善整个社会的方式。我们必须关注那些试图破坏小人物的人，我们必须努力让每个人的机会更加平等。我们的意志是坚强的，我们也必须让我们的人民坚强。"
  USA_rebuilding_the_democratic_system: "重建民主制度"
  USA_rebuilding_the_democratic_system_desc: "我们必须着眼于从根本上重建我们的民主。我们必须关注我们的内部安全和我们国家及其政治机构的完整性。虽然这在地缘政治上可能会让我们付出代价，但国内的反弹在长远来看肯定会有所帮助。"
  USA_equal_opportunity_for_all: "人人机会均等"
@@ -923,7 +923,7 @@
  USA_yellow_tape_fixes: "修补黄带"
  USA_yellow_tape_fixes_desc: "之前的削减导致了负面和正面的平衡，使得整个过程失去了意义。因此，许多人怀疑是否真的发生了变化，所以我们必须实施特定的经济放松措施，并且作为奖励，我们将在小型企业协会的帮助下放松税法中与中小型企业相关的部分。"
  USA_where_are_my_dice: "我的骰子在哪里？"
- USA_where_are_my_dice_desc: "各州对赌博和类似的机构的态度非常不可预测。有些人看到的是剥削，我们看到的是经济激励。我们将制定针对这类行业的联邦标准，以使其几乎不会被废除。虽然这可能会惹恼一些更基于信仰的选民，但从更大的方面来看，这将被视为一个净积极因素。"
+ USA_where_are_my_dice_desc: "在赌博和类似机构方面，各州的表现都极为难以预测。虽然有些人认为这是剥削，但我们认为这是经济诱因。联邦将针对此类行业制定标准，几乎不会废除此类行业。虽然这可能会激怒更多信仰坚定的选民，但从长远来看，这将被视为一件好事。"
  USA_encourage_organ_donors: "鼓励器官捐献"
  USA_encourage_organ_donors_desc: "器官的黑市显示了对器官替换市场的明显的漠视，即使是那些需要的人也得不到帮助。为了改变这种可怕的行为，我们将大幅减少这些做法周围的行政繁文缛节，并找到方法让医疗机构更好地激励和增加人们自愿参与器官捐献。"
  USA_personal_policing: "个人警务"
@@ -995,7 +995,7 @@
  USA_economic_backbone: "经济的支柱"
  USA_economic_backbone_desc: "经济的支柱一直是遍布这个国家街道的小店。我们必须改变一些规定，让他们能够扩张和容易成立，给予这些新鲜空气，我们期待随着人们得到更好的工作场所的支持，生产力会有所提高。"
  USA_searing_the_fake_act: "焚毁虚假法案"
- USA_searing_the_fake_act_desc: "许多在我们国土上的外国投资都带有暗藏的附加条件。有了这个认知，我们将直接攻击这个问题，虽然这可能不是完全的净正面，但它肯定会保持我们国家的尊严和活力，不受外国干涉。"
+ USA_searing_the_fake_act_desc: "许多外国投资在我们国土上都伴随着字里行间的各种措施。有了这些认识，我们将迎难而上，尽管这可能不完全是好事，但它肯定会在外国干涉下，让我们国家的神圣性得以保持。"
  USA_reformed_economy: "改革后的经济"
  USA_reformed_economy_desc: "国家正处于适应时代的改革高峰，虽然我们还有工作要做，但这无疑是一个人民和整个国家的繁荣和自豪的未来。我们的人民对国内形势的信心几乎与我们军队中的人民在最近几年举行的战争游戏和演习中表现出的坚韧和活力相一致。一个新时代的黎明即将到来。"
  USA_truly_reformed_republic: "一个真正改革的共和国"
@@ -1009,7 +1009,7 @@
  USA_shaving_fake_right_wing_fodder: "削减假冒的右翼饲料"
  USA_shaving_fake_right_wing_fodder_desc: "这个国家所谓的右翼充斥着乌合之众和彻头彻尾的伪装者。这些被称为新保守主义者的人和他们的意识形态后代，试图向我们国家的公民撒谎，用这些高高在上的想法破坏我们的创始原则，认为只有政府才能解决问题。我们看穿了这种叛国行为，将竭尽全力扭转和修复这些变化。我们将从政府对大公司的补贴开始。"
  USA_de_looping_the_holes: "填补漏洞"
- USA_de_looping_the_holes_desc: "这个国家的税法是一团糟，预算重叠，分配效率低下，有些预算根本没有任何用处。我们将削减这些预算，改革并向人民退还政府实际上从他们那里偷走的钱。这将减少我们的需求，帮助我们的人民，但是富豪们可能不喜欢这些严厉的措施。"
+ USA_de_looping_the_holes_desc: "这个国家的税法一团糟，预算重叠，分配效率低下，预算根本没用。我们将削减这些开支，进行改革，然后用政府从人民手中偷走的钱重新补偿他们。这将减少我们的要求并帮助我们的人民，但富豪们可能不喜欢这些严厉的行动。"
  USA_states_rights_commission: "州权委员会"
  USA_states_rights_commission_desc: "破坏我们宪法的旧秩序已经进一步刺入了我们国家的心脏。每天有成千上万的人因为联邦政府的一刀切的决定而遭受苦难。这是一场折磨，不再。一个独立的委员会将用于将原本属于人民和他们的州的东西还给他们。"
  USA_second_amendment_first_priority: "第二修正案，第一要务"
@@ -1031,7 +1031,7 @@
  USA_scholars_interpretation_act: "学者解释法案"
  USA_scholars_interpretation_act_desc: "学者解释法案是一项立法，它在法律上规定了在解释宪法与现代问题的关系时的方法论。这种语言是为它所在的时代而写的。因此，当这种语言发生变化时，我们必须回顾过去，了解这种变化是什么，以及它适用于哪种现实。记住，所有人……都是平等的。不是所有男人……想想吧，学者。"
  USA_uniform_institutions_act: "统一机构法案"
- USA_uniform_institutions_act_desc: "我们的联邦政府在外交政策上搞得一团糟，以至于分散了对国内政策的注意力。我们将通过实施有关政府机构的规范和统一的立法来解决这个问题，无论是国内还是国外的机构。通过削减多余的开支和投资于那些他们想要控制的国家，我们可以在下一次预算报告中给我们国家的人民减税。"
+ USA_uniform_institutions_act_desc: "我们的联邦政府把外交政策搞得一团糟，以至于分散了对国内政策的注意力。我们将通过实施有关国内外政府机构监管和统一的立法来解决这一问题。通过削减过度支出和他们原本想控制的国家的投资，我们可以在即将到来的预算报告中通过减税回馈我们的人民。"
  USA_worthy_trade_deals: "有价值的贸易协定"
  USA_worthy_trade_deals_desc: "我们是一个生产者的国家，但在过去的几十年里，我们只变成了消费者。我们将通过贸易协定来寻找平衡，减少我们的出口，从而有利于国内的生产和消费，引领我们的工业崛起。贸易协定是指两个或多个国家之间就商品或服务的交换达成的协议。贸易协定通常旨在降低或消除关税或其他贸易壁垒"
  USA_historical_rationalism_act: "历史理性主义法案"
