--- a/localisation/simp_chinese/MD_frontend_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_frontend_l_simp_chinese.yml
@@ -170,3 +170,4 @@
  custom_diff_weak_dpr: "@DPR 削弱顿涅茨克人民共和国"
  custom_diff_weak_lpr: "@LPR 削弱卢甘斯克人民共和国"
  custom_diff_weak_leb: "@LEB 削弱黎巴嫩"
+ VERSION_MD_LOADING: "版本：v1.10.2"
