--- a/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
@@ -591,3 +591,12 @@
  RULE_SPREAD_INFLUENCE_GAIN_1_5_DESC: "每次传播行动获得1%的影响力。每次传播影响行动的默认影响增益。"
  RULE_SPREAD_INFLUENCE_GAIN_1: "1%"
  RULE_SPREAD_INFLUENCE_GAIN_1_DESC: "每次传播行动获得2%的影响力。如果你真的想减缓影响力的增长。"
+ RULE_AI_STARTING_POLITICAL_POWER: "AI开局政治点数"
+ RULE_AI_STARTING_POLITICAL_POWER_NO: "开局无政治点数"
+ RULE_AI_STARTING_POLITICAL_POWER_NO_DESC: "AI开局时没有拥有任何政治点数。"
+ RULE_AI_STARTING_POLITICAL_POWER_250: "250政治点数"
+ RULE_AI_STARTING_POLITICAL_POWER_250_DESC: "所有AI国家开局拥有250政治点数。"
+ RULE_AI_STARTING_POLITICAL_POWER_500: "500政治点数"
+ RULE_AI_STARTING_POLITICAL_POWER_500_DESC: "所有AI国家开局拥有500政治点数。"
+ RULE_AI_STARTING_POLITICAL_POWER_1000: "1000政治点数"
+ RULE_AI_STARTING_POLITICAL_POWER_1000_DESC: "为所有AI国家提高1000政治点数。"
