--- a/localisation/simp_chinese/MD_laws_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_laws_l_simp_chinese.yml
@@ -90,7 +90,7 @@
  defence_09_TT: "\n$[defence_09_cost] §HB§! 被花在军事上。\n"
  education_budget: "教育预算"
  edu_01: "初等教育的基本支持"
- edu_01_desc: "我们的初等教育系统长期以来一直遭受资金不足的困扰。这不仅影响教育质量，也影响年轻一代的发展机会。\n[edu_spending_protest_TT]"
+ edu_01_desc: "长期以来，我们的初等教育系统一直遭受资金不足的困扰。这不仅对教育质量造成了负面影响，亦影响了年轻一代的发展机会。\n[edu_spending_protest_TT]"
  edu_01_TT: "\n$[education_01_rate]§HB§!被用在教育上。\n£education_budget_cost_factor_texticon 我们的§1教育支出§!由于我们的§1科研槽§!数量增长了§Y[?research_slot_modifier|.0%]§!。\n"
  edu_02: "初等与中等教育的基本支持"
  edu_02_desc: "对当今人民中小学教育的长期投资将为我们的明天开辟无限的可能性。为了确保所有儿童都有一个体面的人生开端，我们必须保证他们在全国各地的学校获得最低水平的资助。\n[edu_spending_protest_TT]"
@@ -150,13 +150,13 @@
  police_02_desc: "我们的警察和情报部门会完成工作，但仅此而已。只有在公众压力下才会采取进一步行动。\n[police_spending_protest_TT]"
  police_02_TT: "\n$[police_02_rate]§HB§!被用在国家安全上。\n"
  police_03: "大量的警力与情报投资"
- police_03_desc: "我们的警察和情报部门资金充足。治安维护良好，有能力密切关注国内外的阴谋。\n[police_spending_protest_TT]"
+ police_03_desc: "我们的警察和情报部门资金充足。法制得到了很好的维护，有能力密切关注国内外的阴谋。\n[police_spending_protest_TT]"
  police_03_TT: "\n$[police_03_rate]§HB§!被用在国家安全上。\n"
  police_04: "广泛的警察与情报机构"
  police_04_desc: "我们的警察和情报部门资金非常充足。他们有能力打击腐败和犯罪。此外，他们还对所有危险的行动保持广泛的监视。\n[police_spending_protest_TT]"
  police_04_TT: "\n$[police_04_rate]§HB§!被用在国家安全上。\n"
  police_05: "警察国家"
- police_05_desc: "我们的警察和情报部门获得了大量资源。 他们有能力打击腐败和犯罪，并有庞大的行动来监视所有内部持不同政见者和外国的阴谋。\n[police_spending_protest_TT]"
+ police_05_desc: "我们的警察和情报部门拥有大量资源。他们有能力打击腐败和犯罪，并利用庞大的行动来监视所有内部异议和外国阴谋。\n[police_spending_protest_TT]"
  police_05_TT: "\n$[police_05_rate]§HB§!被用在国家安全上。\n"
  Military_policies: "军事政策"
  Conscription_Law: "征兵法案"
@@ -183,11 +183,11 @@
  intervention_isolation: "孤立主义"
  intervention_isolation_desc: "我们的国家对内部事务更感兴趣，并且不希望进行任何军事冒险。"
  intervention_local_security: "域内安全"
- intervention_local_security_desc: "我们可以为我们的朋友提供军火，但是我们主要关心我们自己边界内的事务。"
+ intervention_local_security_desc: "我们可以为我们的朋友提供军火。但，我们主要关心我们自己边界内的事务。"
  intervention_limited_interventionism: "有限干涉主义"
  intervention_limited_interventionism_desc: "我们愿意冒着牺牲自己士兵生命的危险来确保我们的朋友能活下来。"
  intervention_regional_interventionism: "地区干涉主义"
- intervention_regional_interventionism_desc: "使离家园近的地区保持秩序是重要的，我们必须利用战争的威胁来维持这一秩序。"
+ intervention_regional_interventionism_desc: "我们称之为家园的地方至关重要。我们必须利用战争的威胁来维持秩序，防止我们称之为家园的地方出现动荡。"
  intervention_global_interventionism: "全球干涉主义"
  intervention_global_interventionism_desc: "我们的军事力量遍布世界各地，维护世界稳定是我们的责任。"
  intervention_neo_imperialism: "新帝国主义"
@@ -204,10 +204,10 @@
  officer_advanced_training_desc: "表现出领导才能的人将被挑选出来，并接受如何领导军队的进阶训练。"
  officer_advanced_training_TT: "军队开支：§R+10%§!\n"
  officer_military_school: "军官学校"
- officer_military_school_desc: "我们已经建立了特殊的军事学校，有天赋的人可以从他们的军事生涯一开始就直接接受领导部队的训练。"
+ officer_military_school_desc: "我们已经建立了特殊军事学院，让有天赋的人从军旅生涯一开始就能直接接受带兵训练。"
  officer_military_school_TT: "战斗中的阵亡几率：§G-15%§!\n"
  officer_military_academy: "军事学院"
- officer_military_academy_desc: "我们已经建立了名满天下的军事学院，在那里我们的军官将学习最好的战术和战略，并在那里发展新的方式去发动战争。"
+ officer_military_academy_desc: "我们建立了著名的军事院校，我们的军官将在那里学习最优秀的战术与战略，并开发新战争方式。"
  officer_military_academy_TT: "战斗中的阵亡几率：§G-30%§!\n"
  officer_international_education: "军官国际培训"
  officer_international_education_desc: "在我们盟国的帮助下，我们可以获得海量的知识和资源，以确保我们的军官做好准备，迎接任何可能的战争。"
@@ -215,11 +215,11 @@
  trade_laws: "贸易法案"
  trade_laws_desc: "贸易法很重要。它们也决定着我们伟大的国家如何在经济上发展壮大。为我们的国家选择一个贸易法"
  md_closed_economy: "封闭经济"
- md_closed_economy_desc: "封闭经济将与世隔绝。如果可能的话，几乎不与外界进行贸易。国家尽可能的纯粹依靠自己。然而，一些资源仍然可以出口到我们最亲密的盟友。"
+ md_closed_economy_desc: "封闭经济将与世隔绝。如果可能的话，几乎不与外界进行贸易。国家尽可能的纯粹依靠自己。然而，仍可能会向一些最亲密的盟国出口一些资源。"
  consumption_economy: "消费经济"
  consumption_economy_desc: "消费经济描述了由消费支出驱动的经济占其国内生产总值的百分比，而不是GDP的其他主要组成部分。"
  semi_consumption_economy: "半消费经济"
- semi_consumption_economy_desc: "半消费经济是一种全新的现象。它们是出口经济和消费经济的混合体，没有经济上依赖其他收入手段的麻烦。然而，与真正的混合经济不同，半消费经济仍然严重依赖消费支出占国内生产总值的百分比。"
+ semi_consumption_economy_desc: "半消费经济是一种相对较新的现象。它们是出口经济和消费经济的混合体，没有经济上依赖其他收入手段的麻烦。然而，与真正的混合经济不同，半消费经济仍然严重依赖消费支出占国内生产总值的百分比。"
  mixed_economy: "混合经济"
  mixed_economy_desc: "混合型经济与半消费型经济非常相似。它们甚至不太依赖消费支出作为一个整体来构成其国内生产总值。"
  export_economy: "出口经济"
@@ -305,3 +305,20 @@
  bureau_03_desc: "[adm_spending_protest_TT]"
  bureau_04_desc: "[adm_spending_protest_TT]"
  bureau_05_desc: "[adm_spending_protest_TT]"
+ migration_laws: "移民法案"
+ open_borders: "开放边界"
+ open_borders_desc: "开放边界是指国家的移民法极其宽松或根本不存在。它允许人们自由进出该国。"
+ open_borders_tt: "\n$$[migration_laws_rate_01]§HB§!被用于移民管制。\n$current_migration_rate$"
+ slightly_regulated_immigration: "移民轻度管制"
+ slightly_regulated_immigration_desc: "对出入境人员实施一些宽松的管理条例，应有助于遏制一些因曾被指控犯有刑事罪或其他罪行而被拒入境的移民潮。"
+ slightly_regulated_immigration_tt: "\n$$[migration_laws_rate_02]§HB§!被用于移民管制。\n$current_migration_rate$"
+ regulated_immigration: "移民管制"
+ regulated_immigration_desc: "制定例如限制移民数量、要求无犯罪记录、未成年人签证等的法规，对于建立合理的移民法律思维至关重要。"
+ regulated_immigration_tt: "\n$$[migration_laws_rate_03]§HB§!被用于移民管制。\n$current_migration_rate$"
+ heavily_regulated_immigration: "移民严格管制"
+ heavily_regulated_immigration_desc: "施行移民数量的严格管制规则，设置难以获得的签证，建立专门的机构以执行这些规则，并遏制一切形式的非法移民。"
+ heavily_regulated_immigration_tt: "\n$$[migration_laws_rate_04]§HB§!被用于移民管制。\n$current_migration_rate$"
+ closed_borders: "关闭边境"
+ closed_borders_desc: "国家的边界必须关闭，以确保国族的特性得以保留，我们必须关闭我们的边界。"
+ closed_borders_tt: "\n$$[migration_laws_rate_05]§HB§!被用于移民管制。\n$current_migration_rate$"
+ current_migration_rate: "\n最大§Y移民率§!：[?max_net_immigration_rate|%]\n当前净§Y移民率§!：[?net_immigration_rate|%]"
