--- a/localisation/simp_chinese/MD_money_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_money_l_simp_chinese.yml
@@ -572,7 +572,7 @@
  NUM_STATE_PRODUCTIVITY_DELAYED_DESC: "该国每月生产力增长率为：§U[?state_productivity_growth_scaled|3+]§!\n\n各省的生产率增长规模与全球平均生产率值相关，低于平均水平的省将增长更快。"
  EMPLOYMENT_TOOLTIP: "劳动力分布"
  EMPLOYMENT_TOOLTIP_DELAYED: "劳动力总数：§Y[?ROOT.workforce_total_display|3]§!\n劳动力人口比例：§Y[?ROOT.workforce_total_percentage_display|%]§!\n\n每百万劳动力在各部门分布：\n§G军用工厂§!：[?ROOT.workers_in_mil_facs|3]\n§B海军船坞§!：[?ROOT.workers_in_dockyards|3]\n§O民用工厂§!：[?ROOT.workers_in_civ_facs|3]\n§C办公园区§!：[?ROOT.workers_in_offices|3]\n§G农业§!：[?ROOT.agriculture_workers|3]\n§C资源开采§!：[?ROOT.resource_sector_workers|3]\n§R失业与勉强度日§!：[?ROOT.total_unemployed|3]\n\n当前失业率：§R[?ROOT.total_unemployed_percentage_display|%]§!\n\n\n§Y最高失业率阈值：§! [?ROOT.unemployment_threshold_display_var|%0]\n\n§Y高失业率的影响§!\n £stability_texticon 稳定度：[?ROOT.high_unemployment_modifier_var|%+] £social_cost_multiplier_modifier_texticon §Y社会支出成本§!乘数：[?ROOT.high_unemployment_modifier_var_2|%-]"
- UNEMPLOYMENT: "§Y失业率：§! [?ROOT.total_unemployed_percentage_display|%0]"
+ UNEMPLOYMENT: "§Y失业率：§! "
  POPULATION_TAX_RATE_TT: "人口税率包括向公众征收的所有税收。这包括但不限于所得税、增值税、销售税和财产税。\n\n§Y来自人口税的修正：§!\n£stability_texticon 稳定度：[?stability_factor_from_population_tax|%+]"
  CORPORATE_TAX_RATE_TT: "公司税率包括对公司征收的所有税款。 该价值包括企业所得税、雇主税等。\n\n§Y来自公司税的修正：§!\n£consumer_goods_texticon  税收成本：[?consumer_goods_from_corporate_tax|%Y]\n£receiving_investment_cost_modifier_texticon §Y接收外国投资§!所耗成本：[?receiving_investment_cost_form_corporate_tax|%-] \n每月生产力增长：[?productivity_growth_modifier_from_corporate_tax|+3]\n"
  military_factory_employment_button_tt: "§Y军用工厂就业水平§!"
@@ -606,7 +606,7 @@
  total_military_factories_amount_tt: "这个数字代表了我们国家的§Y军用工厂§!总数量。"
  total_military_factories_amount_tt_delayed: "此建筑可为所属地区提供生产军事装备的工业能力。亦可因需转换为民用工厂。\n\n为所属地区提供：\n所需工人基础数量：§Y25K§!\n每个§Y军用工厂§!的基本GDP产出：$§Y1B§!\n基础能源消耗：§R-0.4§! GW"
  total_naval_yard_amount_tt: "这个数字代表了我们国家的§Y船坞§!总数量。"
- total_naval_yard_amount_tt_delayed: "此建筑可为所属地区提供建造新舰船的工业能力。\n\n为所属地区提供：\n所需工人基础数量：§Y25K§!\n每个§Y船坞§!的基本GDP产出：$§Y1B§!\n基础能源消耗：§R-0.4§! GW"
+ total_naval_yard_amount_tt_delayed: "§Y海军船坞§!代表了一个国家生产§Y巡逻艇§!、§Y护卫舰§!、§Y驱逐舰§!、§Y航母§!等各种军舰的能力。\n\n为所属地区提供：\n所需工人基础数量：§Y25K§!\n每个§Y船坞§!的基本GDP产出：$§Y1B§!\n基础能源消耗：§R-0.4§! GW"
  total_offices_amount_tt: "这个数字代表了我们国家的§Y办公园区§!总数量。"
  total_offices_amount_tt_delayed: "§Y办公园区§!代表了除采掘业和重工业以外的所有其他经济行业。这些包括金融、服务、信息技术、零售等。\n\n为所属地区提供：\n所需工人基础数量：§Y630K§!\n每个§Y办公园区§!的基本GDP产出：$§Y50B§!\n基础能源消耗：§R-0.2§! GW"
  VEN_iron_control_vdp_TT: "从§Y$VEN_iron_control_vdp$§!获得$$[?additional_income_iron_control_vdp|+3]\n"
@@ -615,7 +615,7 @@
  HEZ_hezbollah_lebanese_support_TT: "从§Y黎巴嫩§!获得$$[?HEZ_lebanese_support_money|+3]\n"
  HEZ_hezbollah_iranian_support_TT: "从§Y伊朗§!获得$$[?HEZ_iranian_support_money|+3]\n"
  HEZ_unkown_funds_TT: "从§Y不明来源§!获得$$[?HEZ_unknown_funds_income|+3]\n"
- UNEMPLOYMENT_THRESHOLD: "§Y失业阈值：§![?ROOT.unemployment_threshold_display_var|%0]"
+ UNEMPLOYMENT_THRESHOLD: "§3失业阈值：§!"
  UNEMPLOYMENT_THRESHOLD_TT: "§Y最高失业率阈值§!是指您的国家在不受到§Y高失业率§!的负面影响之前，可以达到的§Y失业率§!的最大值。超过这个值，您将开始遭受£social_cost_multiplier_modifier_texticon §Y社会支出成本§!的增加和£stability_texticon 稳定度的降低。\n\n§Y高失业率的影响§!\n £stability_texticon 稳定度：[?ROOT.high_unemployment_modifier_var|%+]\n £social_cost_multiplier_modifier_texticon §Y社会支出成本§!乘数：[?ROOT.high_unemployment_modifier_var_2|%-]"
  GER_russian_buddies_income_tt: "$$[?additional_income_GER_russian_buddies|+3]来自§Y$GER_russian_buddies$§!\n"
  BLR_minotor_servise_blr_gain_loc: "$$[?BLR_minotor_servise_blr_gain_loc|+3]来自米诺托尔服务公司交易！\n"
@@ -626,7 +626,7 @@
  market_sold_income_tt: "\n$$§G[?market_sold_value_track]§!来自§Y市场合同§!\n"
  open_contract_money_screen: "打开合同花费菜单"
  open_contract_money_screen_desc: "打开国际市场的资金花费菜单。"
- EMPLOYMENT_AVERAGE: "§Y平均劳动力填充度：§! [?ROOT.average_worker_fulfillment|%0]"
+ EMPLOYMENT_AVERAGE: "§J平均劳动力填充度：§! "
  EMPLOYMENT_AVERAGE_TT: "劳动力填充度"
  EMPLOYMENT_AVERAGE_TT_DELAYED: "§Y劳动力填充度§! 是代表您的国家有多少工人参与工作与我们的建筑物所需的工人数量相比的值。\n\n§Y平均劳动力填充度：§! [?ROOT.average_worker_fulfillment|%0]\n\n§Y不同建筑的劳动力填充度：§!\n民用工厂：§Y[?ROOT.civilian_factories_manpower_fulfillment|%]§!\n军用工厂：§Y[?ROOT.military_factories_manpower_fulfillment|%]§!\n海军船坞：§Y[?ROOT.naval_factories_manpower_fulfillment|%]§!\n办公园地：§Y[?ROOT.offices_manpower_fulfillment|%]§!\n商业性农业区：§Y[?ROOT.agriculture_district_manpower_fulfillment|%]§!\n"
  alaa_income_tt: "$$[?additional_income_mubarak|+3]来自§Y$EGY_mubarak_money$§!\n"
@@ -658,3 +658,19 @@
  total_agriculture_district_amount_tt_delayed: "§Y商业化农业区§!是我国所有非自给性农业的总称。它包括农业工业、耕地、粮仓、屠宰场等。\n\n为所属地区提供：\n所需工人基础数量：§Y200K§!\n每个§Y商业化农业区§!的基本GDP产出：$§Y25B§!\n基础能源消耗：§R-0.10§! GW\n地区§Y燃料获取§!：10\n§Y当地补给能力§!：1.5%\n"
  defence_industry_subsidies: "$$[?defence_industry_subsidies|-3]来自§Y$defense_industry$§!补贴(剩余天数：[?defence_industry_subsidies:days_left|Y0]）\n"
  SOV_kal_with_income_loc: "$$[?additional_income_SOV_kal_with|+3]来自于§Y钾肥贸易§!\n"
+ UNEMPLOYMENT_THRESHOLD_RATE: "[?ROOT.unemployment_threshold_display_var|%Y]"
+ EMPLOYMENT_AVERAGE_RATE: "[?ROOT.average_worker_fulfillment|%0]"
+ UNEMPLOYMENT_RATE: "[?ROOT.total_unemployed_percentage_display|%-]"
+ MIGRATION_LAWS: "§7移民管制§!："
+ MIGRATION_LAWS_RATE: "$$[?border_control_gain|-3]"
+ MIGRATION_LAWS_TOOLTIP: "移民管制"
+ MIGRATION_LAWS_TOOLTIP_DELAYED: "移民管制代表我国§Y移民法§!和现行移民政策所产生的费用。§7移民管制§!的基本成本基于该国总人口，每增加一级§Y移民法§!，成本就会增加。\n\n人均GDP对§Y移民法§!的影响：[?education_cost_gdp_multiplier_display|-%0]\n法律，国家精神和科技对§Y移民法§!的影响：[?border_cost_multiplier_display|-%0]"
+ migration_rate_impact_effect: "净§Y移民率§!"
+ MAXIMUM_MIGRATION_RATE: "§L最大移民率：§!"
+ MAXIMUM_MIGRATION_RATE_VALUE: "[?ROOT.max_net_immigration_rate|%Y]"
+ MAXIMUM_MIGRATION_RATE_TT: "最大移民率"
+ MAXIMUM_MIGRATION_RATE_TT_DELAYED: "§Y最大移民率§!是指一个国家潜在可接受的总§Y移民§!数量。它受您的§Y经济周期§!、§Y生产率§!、§Y当前执政党§!、§Y劳动力填充度§!、§Y失业率§!、§Y战争支持度§!以及您是否处于战争状态的影响。该值不能在上述指标之外直接增加，您可以通过增强§Y移民法§!或通过国策、国家精神或决议来获取更多的§Y移民率§!。\n\n§Y对最大移民率的影响：§!\n--------------\n§Y最大生产率§!：[?immigration_productivity_calculations_display|%+]\n§O最大劳动力填充度/失业率§!：[?immigration_employment_factor_display|%+]\n§C战争支持度(战争期间启用)§!：[?immigration_war_support_factor_display|%+]\n§G政府执政党§!：[?immigration_government_factor_display|%+]\n§p邻国的战争难民§!：[?neighbour_war_refugees_display|%+]\n§n我国的战争难民§!：[?personal_war_refugees_display|%+]\n§L经济周期/国家精神§!：[?modifier@maximum_migration_rate_value|%+]"
+ NET_MIGRATION_RATE: "§p当前净移民率：§!"
+ NET_MIGRATION_RATE_VALUE: "[?ROOT.net_immigration_rate|%+]"
+ NET_MIGRATION_RATE_TT: "当前净移民率"
+ NET_MIGRATION_RATE_TT_DELAYED: "§Y净移民率§!是指当前我国境内的§Y移民§!数量。它可以通过国家内容或调整§Y移民法案§!进行修改。该值的计算方法是：§Y基础移民率§!值乘以§Y移民率值系数§!\n\n法案，国家精神和科技对§Y基础移民率§!的影响：[?modifier@base_migration_rate_value|+%0]\n法案，国家精神和科技对§Y移民率值系数§!的影响：[?modifier@migration_rate_value_factor|+%0]"
