--- a/localisation/simp_chinese/MD_operations_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_operations_l_simp_chinese.yml
@@ -15,9 +15,9 @@
  usa_soleimani_exfiltration_fail: "我们在靠近边境时被伊朗警方抓获了。"
  track_HVTs: "追踪首要目标"
  track_HVTs_desc: "[FROM.GetName]的恐怖活动由几个高调指挥官领导。为了消灭这些指挥官，我们必须首先利用情报人员来确定他们的准确位置。"
- OPERATION_TOKEN_HVT: "HVT 位置"
- OPERATION_TOKEN_HVT_DESC: "已经找到了首要目标。"
- ct_track_HVTs: "锁定首要目标"
+ OPERATION_TOKEN_HVT: "高价值目标位置"
+ OPERATION_TOKEN_HVT_DESC: "已经找到了高价值目标。"
+ ct_track_HVTs: "锁定高价值目标"
  ct_track_HVTs_desc: "我们的特工会利用当地情报人员和通讯情报人员来追踪圣战分子指挥官。然后，这些资料将传回总部，以便为今后的行动作准备。"
  ct_track_HVTs_outcome: "我们的特工设法通过当地线人获得了一名重要的圣战指挥官的位置，并成功地监测了圣战分子的通讯。"
  ct_track_HVTs_outcome_fail: "§R圣战分子嗅到了我们特工行动的迹象，在他们找到任何重要指挥官之前，在一个偏远的地方伏击了他们。事故发生时，我们和探员失去了联系。§!"
