--- a/localisation/simp_chinese/events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/events_l_simp_chinese.yml
@@ -1518,63 +1518,63 @@
  AIDS_events.3.a: "极好"
  debug_money.1.t: "资源销售率计算器"
  debug_money.1.d: "[?percentage_of_resource_exports|%1]"
- corruption.1.t: "有趣的提案"
+ corruption.1.t: "某种提案..."
  corruption.1.d: "一位部长提出，表示可以通过一些组织和法律变革来优化我们的行政管理的绩效，尽管这需要一些…个人与推动力量的联系。"
  corruption.1.a: "或许，这是个机会。"
  corruption.1.b: "坏主意"
- corruption.2.t: "有趣的提案"
+ corruption.2.t: "某种提案..."
  corruption.2.d: "一位部长提出，表示可以通过一些组织和法律变革来优化我们的警察的绩效，尽管这需要一些…个人与推动力量的联系。"
  corruption.2.a: "或许，这是个机会。"
  corruption.2.b: "坏主意"
- corruption.3.t: "有趣的提案"
+ corruption.3.t: "某种提案..."
  corruption.3.d: "一位部长提出，表示可以通过一些组织和法律变革来优化我们的军事基地的绩效，尽管这需要一些…个人与推动力量的联系。"
  corruption.3.a: "或许，这是个机会。"
  corruption.3.b: "坏主意"
- corruption.4.t: "有趣的提案"
+ corruption.4.t: "某种提案..."
  corruption.4.d: "一位部长提出，我们可以做出一些组织和法律上的改变，以优化我们教育设施的运行效率。然而，这需要一些...与推动力量的私人关系。"
  corruption.4.a: "或许，这是个机会。"
  corruption.4.b: "坏主意"
- corruption.5.t: "有趣的提案"
+ corruption.5.t: "某种提案..."
  corruption.5.d: "一位部长主动找到我们，表示可以通过进行一些组织和法律的改革，以优化我们医院的运行效率，尽管这需要一些...与推动变革的力量有个人联系。"
  corruption.5.a: "或许，这是个机会。"
  corruption.5.b: "坏主意"
- corruption.6.t: "有趣的提案"
+ corruption.6.t: "某种提案..."
  corruption.6.d: "一位部长主动接触我们，表示可以通过进行一些组织和立法的变革，优化我们的社会机构的表现，虽然这需要一些...与推动力量的个人关系。"
  corruption.6.a: "或许，这是个机会。"
  corruption.6.b: "坏主意"
- corruption.7.t: "有趣的提案"
+ corruption.7.t: "某种提案..."
  corruption.7.d: "一家新闻机构提出，只要我们提供资金支持，他们便会发布更多对我们有利的新闻。"
  corruption.7.a: "或许，这是个机会。"
  corruption.7.b: "坏主意"
- corruption.8.t: "有趣的提案"
+ corruption.8.t: "某种提案..."
  corruption.8.d: "一位中立的政客主动提出了与我们合作对抗反对派的意向，尽管这可能需要我们进行一些不那么清白的工作。"
  corruption.8.a: "或许，这是个机会。"
  corruption.8.b: "坏主意"
- corruption.9.t: "有趣的提案"
+ corruption.9.t: "某种提案..."
  corruption.9.d: "有一家建筑公司主动与我们取得联系，询问是否可以越过一些规定，以便尽可能提供最佳的成果。"
  corruption.9.a: "或许，这是个机会。"
  corruption.9.b: "坏主意"
- corruption.10.t: "有趣的提案"
+ corruption.10.t: "某种提案..."
  corruption.10.d: "一名军事分包商主动联系我们，询问是否可以绕过一些法律条款，以使新设施的建设进程加快。"
  corruption.10.a: "或许，这是个机会。"
  corruption.10.b: "坏主意"
- corruption.11.t: "有趣的提案"
+ corruption.11.t: "某种提案..."
  corruption.11.d: "一家军事分包商主动取得联系，询问是否可以忽略一些环保法规，以便尽全力做到最好的结果。"
  corruption.11.a: "或许，这是个机会。"
  corruption.11.b: "坏主意"
- corruption.12.t: "有趣的提案"
+ corruption.12.t: "某种提案..."
  corruption.12.d: "一家军事分包商主动接触，询问是否可以忽视一些环保法律以尽可能地提供最佳成果。"
  corruption.12.a: "或许，这是个机会。"
  corruption.12.b: "坏主意"
- corruption.13.t: "有趣的提案"
+ corruption.13.t: "某种提案..."
  corruption.13.d: "某一投资基金以独具匠心的策略主动寻求海外投资，尽管这似乎颇有违反国际法的嫌疑。"
  corruption.13.a: "或许，这是个机会。"
  corruption.13.b: "坏主意"
- corruption.14.t: "有趣的提案"
+ corruption.14.t: "某种提案..."
  corruption.14.d: "我们的一位亲密朋友主动提出，建议举办一个小型聚会，以便政府能更紧密地与其最信任的商业伙伴建立联系。"
  corruption.14.a: "或许，这是个机会。"
  corruption.14.b: "坏主意"
- corruption.15.t: "有趣的提案"
+ corruption.15.t: "某种提案..."
  corruption.15.d: "我们的一位商人主动提出建议，提出一项从资源获取中增加利润的计划，尽管这肯定会给整个行业带来压力"
  corruption.15.a: "或许，这是个机会。"
  corruption.15.b: "坏主意"
@@ -1942,3 +1942,16 @@
  korea.37.d: "在今天的联合国安理会会议上，五个常任理事国同意韩国成为新常任理事国的申请。韩国承诺根据《联合国宪章》的义务，尽最大努力维护世界和平。"
  korea.37.a: "世界终于给了被迫分裂的韩国一些补偿。"
  taiwan.15.t: "罢工继续"
+ migrant_event.1.t: "移民贫民窟"
+ migrant_event.1.d: "我们主要城市周围的一些地区开始出现当地人所说的“移民贫民窟”。这是国内贫困移民和难民的聚集地，他们试图谋生，但由于工资低，很难融入东道国，他们只能住在贫民窟里。"
+ migrant_event.1.a: "清理贫民窟"
+ migrant_event.1.b: "提供援助"
+ migrant_event.1.c: "减少移民目标"
+ migrant_event.2.t: "民族主义者抗议移民政策"
+ migrant_event.2.d: "一群民族主义者在我们的一个主要城市组织了一场抗议活动，反对最近涌入该国的移民。抗议活动呼吁对移民施加更多限制，并开始进一步规范国内移民和迁移。"
+ migrant_event.2.a: "允许示威"
+ migrant_event.2.b: "驱散示威者"
+ migrant_event.3.t: "移民被指控犯有暴力罪行"
+ migrant_event.3.d: "国内某些特定群体的移民被指控犯有各种暴力罪行，我们的警察逮捕了大量新移民。右翼抗议者和支持者开始向政府表示，这是不关闭边境的后果。我们应该如何应对？"
+ migrant_event.3.a: "他们确实告诉过我们..."
+ migrant_event.3.b: "增加警察资金"
