--- a/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
@@ -2160,3 +2160,7 @@
  modifier_production_speed_agriculture_district_factor: "£construction_speed_texticon §Y$agriculture_district$§!建造速度"
  agriculture_district_worker_requirement_modifier: "§Y商业化农业区§!所需工人"
  agriculture_district_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$agriculture_district$§!税收乘数"
+ border_control_multiplier_modifier: "§Y移民控制开支§!乘数"
+ maximum_migration_rate_value: "最大§Y移民率§!数值"
+ base_migration_rate_value: "基础§Y移民率§!数值"
+ migration_rate_value_factor: "§Y移民率§!数值系数"
