--- a/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
@@ -4645,3 +4645,10 @@
  SOV_western_russia: "旧风格中的新浪潮"
  SOV_western_russia_desc: "当前的政治现实导致过去的执政党再次赢得选举！但与上一届的主要区别在于改革派占主导地位，其目标是改革体制，以便不会羞于与民主国家合作。"
  SOV_supportlnrdnr_rus_desc: "现在是时候支持顿巴斯共和国了！"
+ sov_navalny.1.t: "格鲁吉亚的命运"
+ sov_navalny.1.d: "格鲁吉亚是我们在高加索地区的问题。现在我们可以决定如何发展与这个国家的关系。"
+ sov_navalny.1.a: "向第比利斯进军"
+ sov_navalny.1.b: "和平关系是我们的优先事项"
+ georgia_broken_relations: "与格鲁吉亚关系破裂"
+ SOV_Georgian_question: "格鲁吉亚的宿命"
+ SOV_Georgian_question_desc: "目前，我们外交政策的主要任务是尽快解决与格鲁吉亚进一步互动的问题。"
