--- a/localisation/simp_chinese/MD_focus_USB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_USB_l_simp_chinese.yml
@@ -361,7 +361,7 @@
  FSA_america_the_consumer_complex_initiative: "消费者综合模型"
  FSA_america_the_consumer_complex_initiative_desc: "随着经济规划的巩固，我们认识到消费者信心和维护公民的经济需求才是真正的优先事项。因此，我们开发了一种新的经济模式，以确保充分结合国家和人民的需求。"
  FSA_america_mixed_measures_plan: "混合措施计划"
- FSA_america_mixed_measures_plan_desc: "经济规划本身就是一门艺术，有些人甚至称之为科学，不管在你眼中它是什么，在我们眼中都是一系列的平衡行为。一个国家或任何规模的社会团体都必须满足许多人的需要，虽然我们不一定总是做对的，但我们肯定能尽最大努力而不像过去那样做错。因此，我们将制定混合措施计划或MMP，这是一个总体经济发展计划，以确保平衡并公平地满足整个国家的复杂需求。"
+ FSA_america_mixed_measures_plan_desc: "经济规划本身就是一门艺术，有些人甚至称其为一门科学。无论在你们眼中它是什么，在我们眼中它都是一系列的平衡行为。一个国家或任何规模的社会团体都必须满足许多人的需求，虽然我们可能并不总是正确的，但我们一定能尽力避免像过去那样犯错。因此，我们将制定混合措施计划，这是一项总体经济发展计划，以确保平衡和公平地满足整个国家的复杂需求。"
  FSA_america_rust_belt_renewal_initiative: "锈带复兴计划"
  FSA_america_rust_belt_renewal_initiative_desc: "锈带复兴计划是一项多元化计划，旨在振兴泽西和宾夕法尼亚州这两个前锈带州，当然也是为了实现经济多元化。该计划的理念是，多元化将为技术上单一的经济模式注入新的活力。"
  FSA_america_twin_sisters_initiative: "孪生姐妹计划"
@@ -371,7 +371,7 @@
  FSA_america_the_office_initiative: "办公室计划"
  FSA_america_the_office_initiative_desc: "服务和办公部门是现代消费者的直接需求。从互联网、有线电视等业务来看，我们希望发展办公部门及其附属业务，这些业务将受益于我们对增长的投资。"
  FSA_america_defense_industry_needs: "国防工业需求"
- FSA_america_defense_industry_needs_desc: "我们国防所需不多，但我们必须平衡地思考。我们可能永远不知道我们会不会出现一个外敌，甚至是我们的邻居。不仅如此，我们的立场还允许我们跳出框架思考，巩固新的身份。现在，我们只需要以自卫为幌子进行有限的军事化。"
+ FSA_america_defense_industry_needs_desc: "我们的国防需求并不大，但我们必须以平衡的方式思考。我们可能永远不知道我们是否会遭到外国敌人甚至是邻国的反击。不仅如此，我们的立场还使我们能够跳出固有的思维模式，巩固新的身份。目前，以自卫为幌子的有限军事化是我们目前所需要的。"
  FSA_america_a_true_balance: "真正的平衡"
  FSA_america_a_true_balance_desc: "我们的经济蓬勃发展，多元化发展，人民和政府的需求也得到了满足。现在我们要调整这一模式，了解如何发展并使其更有效地利用材料、人力和自然资源。最重要的是，我们将制定新的经济效率模型计划，这是一种称为经济效率模型的新经济模型，旨在使我们的经济朝着“高楼大厦”的规划方向发展。"
  FSA_america_militarized_economy_plan: "军事化经济计划"
