--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -345,8 +345,6 @@
  swiss_political_system_desc: "瑞士的政治体制非常独特，也是世界上唯一够格称为“半直接民主”的国家。公民可以通过全民公投改变宪法，通过全民公投否决法律，甚至可以通过全民公投通过法律。\n这对于政客并非百利无一害：公民可以通过公投强制施行某项政策，因而瑞士的政治体制需要包含尽可能多的不同声音。瑞士的四大党：瑞士人民党，自由民主党，基督教民主人民党和社会民主党时常共同执政。这也让瑞士的选举多少变成了场闹剧，毕竟公民并不通过代表，而是通过公投参政。"
  finnish_neutrality: "芬兰中立"
  finnish_neutrality_desc: "尽管在某种程度上是由西方民主国家庇护，芬兰还是为了不激怒俄罗斯而小心的保持了其中立的态度。"
- Migrant_Crisis_Europe: "难民危机"
- Migrant_Crisis_Europe_desc: "移民危机像一把重锤一样冲击着欧洲，冲击着民族团结和执政党的声望。叙利亚战争导致数以千计的难民逃往邻国，尽管欧洲随时准备接受那些饱受战争之苦的难民，但来自北非和中东各地的新移民和永久移民数量已使欧洲的机构不堪重负，并使许多人对新到来的移民感到不满。"
  german_legacy: "德国遗产"
  german_legacy_desc: "§Y特殊规则：§! §W可以禁止极端主义政党。\n基督教民主联盟/基督教社会联盟和社会民主党始终可以组成联盟。§!\n\n由于纳粹战争罪行的重担在肩，作为第二次世界大战的发起者，德国一直在努力扭转其不良形象，甚至避免有关民族主义或军国主义观念的暗示。从法律上讲，德国受到1990年德国与俄罗斯、美国、英国和法国的联盟之间《最终解决德国问题条约》的约束，同时还有单独与波兰的《最终边界条约》的约束。该条约令德国作出领土宣称和拥有核武器的行为是非法的，并将其武装部队总数限制在37万以内。"
  GER_idea_german_education_reforms: "德国教育改革"
@@ -813,7 +811,7 @@
  civil_war_disorganised_military_5: "支离破碎的军队"
  civil_war_disorganised_military_5_desc: "内战的开始使我们与军队失去了联系。我们不确定谁站在谁一边，我们的补给站位于哪里，甚至谁还在向我们提供武器。\n\n§R当这个精神到期时，情况会略有改善。§!\n\n当前军队状况：\n不受控制的\n混乱的\n困惑的\n杂乱无章的\n§Y支离破碎的§!"
  City_Of_Casino: "赌城"
- City_Of_Casino_desc: "一座城市拥有赌场，还是赌场拥有一座城市。"
+ City_Of_Casino_desc: "赌城是澳门的俗称，澳门拥有亚洲密度最高的赌场。澳门被人们亲切地称为“亚洲拉斯维加斯”或“中国拉斯维加斯”。赌场为澳门带来的收入无与伦比，使其成为澳门的一大收入来源，使博彩业不受政府控制。"
  party_commands_gun: "党指挥枪"
  party_commands_gun_desc: "中国人民解放军无比忠诚于中国共产党。这种忠诚是通过严格的思想训练以及在武装部队中担任高级职务的政治干部来保证的。"
  party_commands_gun_new_era: "党指挥枪"
