--- a/localisation/simp_chinese/MD_scripted_effects_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_scripted_effects_l_simp_chinese.yml
@@ -43,3 +43,7 @@
  BLOCK_OFFICER_TRAINING_DECREASE_TT: "§R我们在一年内将无法降低§Y军官培训法案§!！§!"
  OFFICER_TRAINING_INCREASE_BLOCKED_TT: "§R我们现在不能提升§Y军官培训法案§!！§!（剩余天数：[?officer_training_increase_blocked:days_left|Y0]）\n"
  OFFICER_TRAINING_DECREASE_BLOCKED_TT: "§R我们现在不能降低§Y军官培训法案§!！§!（剩余天数：[?officer_training_decrease_blocked:days_left|Y0]）\n"
+ BLOCK_MIGRATION_LAW_INCREASE_TT: "§R我们一年内都无法增强§Y我们的移民法§!！§!"
+ BLOCK_MIGRATION_LAW_DECREASE_TT: "§R我们一年内都无法削弱§Y我们的移民法§!！§!"
+ MIGRATION_LAW_INCREASE_BLOCKED_TT: "§R我们现在无法增强§Y我们的移民法§!！§!（剩余天数：[?officer_training_increase_blocked:days_left|Y0]）\n"
+ MIGRATION_LAW_DECREASE_BLOCKED_TT: "§R我们现在无法削弱§Y我们的移民法§!！§!（剩余天数：[?officer_training_decrease_blocked:days_left|Y0]）\n"
