1 focus and an event chain for war crimes

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -1,4 +1,5 @@
-﻿l_english:
+﻿#By Marmite and Iranian Maggot
+l_english:
  australia_focus: "Australia Focus Tree"
 #Decision
  AST_diplo_tug_of_war: "Australian Diplomatic Tug of War"
@@ -88,6 +89,7 @@
  AST_attack_class2_effect_tt: "The US will commandeer the submarines." #Not really
  australia_md.7.tt: "Will deploy §Y3§! Hobart-Class Air Warfare Destroyers in §Y180§! days."
  AST_attack_class2_effect2_tt: "France will commandeer the submarines." #Not really
+ AST_afghanistan_involvement_warning_tt: "The war in Afghanistan is a guerilla conflict, and dire consequences could result from our involvement if we aren't careful in choosing our intervention forces. If sent to Afghanistan, our boys will serve a tour of §Y2 years§!"
 
 #Tech Boosts
  AST_anzac-class: "Anzac-Class Advancements"
