--- a/localisation/english/MD_ideas_l_english.yml
+++ b/localisation/english/MD_ideas_l_english.yml
@@ -98,6 +98,8 @@
  non_power: "Non-Power"
  non_power_desc: "As a Non-Power, we are essentially a non-factor in international diplomacy, with few, if any, caring about our position on anything. We are tools to more dominant and influential sovereign nations, whom with ease can influence our politics and society.\n\nPower status is determined by how much GDP we contribute to the world total, modified by our §YIndependence from Foreign Influence§!. Our current contribution is §Y[?ROOT.percentage_of_global_factories|%1]§!.\n\nThe required contributions for the different levels are:\nMore than §Y15%§! for §Y$superpower$§!\nMore than §Y6.5%§! for §Y$great_power$§!\nMore than §Y2.5%§! for §Y$large_power$§!\nMore than §Y0.2%§! for §Y$minor_power$§!\nLess than §Y0.2%§! for §Y$non_power$§!\n\nIn every geographic region, a certain number of the strongest §Y$minor_power$s§! will be classified as §Y$regional_power$s§! if there aren't enough §Y$superpower$s§!, §Y$great_power$s§! and §Y$large_power$s§! in the region. The regions and numbers of countries above §Y$minor_power$§! are:\nEurope (7)\nMiddle East and North Africa (3)\nSub-Saharan Africa (3)\nAsia (7)\nAmericas (4)."
  non_power_tt: "£economy_laws_cost_texticon  Laws Cost: §G-20%§!"
+ naval_power_of_the_continent: "Naval Power of the Continent"
+ naval_power_of_the_continent_desc: "We possess the largest naval power of our continent and we currently represent the largest naval power on our continent. Someone can overtake us assuming their §YDeployed Naval Manpower§! is larger than ours."
 
  ##Generic Ideas
  nf_mosque_funding: "Mosque Funding"
