--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,8 @@ v1.10.2
   - Adjusted the GDP/c Monthly Population to always be positive
   - Rebalanced some of the ideas for the European Union
   - Rebalanced Greek focuses in the Economy tree to make it less of a pain in the ass
+  - Reduced base yearly population growth from 0.01 to 0.008 to accommodate for the migration system
+  - Reduced the Welfare law monthly population and spread it more evenly among the laws
 
  Bugfix:
   - Fixed an issue where the Base Fuel Gain of a nation wasn't quite accurate
